--- a/notebooks/02.01-Understanding-Data-Types.ipynb
+++ b/notebooks/02.01-Understanding-Data-Types.ipynb
@@ -137,9 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -160,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -189,9 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -212,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -241,9 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -300,9 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -337,10 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -357,10 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -368,7 +352,7 @@
        "array([1, 4, 2, 5, 3])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,18 +372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3.14,  4.  ,  2.  ,  3.  ])"
+       "array([3.14, 4.  , 2.  , 3.  ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,18 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  2.,  3.,  4.], dtype=float32)"
+       "array([1., 2., 3., 4.], dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,10 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -459,7 +437,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,10 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -499,7 +475,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,20 +487,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.,  1.,  1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1.,  1.,  1.]])"
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,20 +510,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.14,  3.14,  3.14,  3.14,  3.14],\n",
-       "       [ 3.14,  3.14,  3.14,  3.14,  3.14],\n",
-       "       [ 3.14,  3.14,  3.14,  3.14,  3.14]])"
+       "array([[3.14, 3.14, 3.14, 3.14, 3.14],\n",
+       "       [3.14, 3.14, 3.14, 3.14, 3.14],\n",
+       "       [3.14, 3.14, 3.14, 3.14, 3.14]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,10 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -572,7 +542,7 @@
        "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,18 +556,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ])"
+       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,20 +577,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.99844933,  0.52183819,  0.22421193],\n",
-       "       [ 0.08007488,  0.45429293,  0.20941444],\n",
-       "       [ 0.14360941,  0.96910973,  0.946117  ]])"
+       "array([[0.44576841, 0.08335964, 0.52372422],\n",
+       "       [0.05983553, 0.76859829, 0.53675196],\n",
+       "       [0.78285488, 0.39630393, 0.55507546]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,20 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.51772646,  0.39614948, -0.10634696],\n",
-       "       [ 0.25671348,  0.00732722,  0.37783601],\n",
-       "       [ 0.68446945,  0.15926039, -0.70744073]])"
+       "array([[-1.73926586,  0.07670412,  0.00731209],\n",
+       "       [ 0.45487894,  0.83190059,  0.67653576],\n",
+       "       [-1.1226595 , -0.28031565, -0.03427457]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,20 +625,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 3, 4],\n",
-       "       [5, 7, 8],\n",
-       "       [0, 5, 0]])"
+       "array([[5, 3, 3],\n",
+       "       [7, 0, 5],\n",
+       "       [9, 5, 3]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,43 +648,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  1.]])"
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 1]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a 3x3 identity matrix\n",
-    "np.eye(3)"
+    "np.eye(3, dtype=int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  1.,  1.])"
+       "array([1., 1., 1.])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +759,17 @@
   }
  ],
  "metadata": {
+  "_draft": {
+   "nbviewer_url": "https://gist.github.com/6173b4ecef003e310fb216bb2dbed625"
+  },
   "anaconda-cloud": {},
+  "gist": {
+   "data": {
+    "description": "notebooks/02.01-Understanding-Data-Types.ipynb",
+    "public": false
+   },
+   "id": "6173b4ecef003e310fb216bb2dbed625"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -817,9 +785,48 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
