--- a/notebooks/02.02-The-Basics-Of-NumPy-Arrays.ipynb
+++ b/notebooks/02.02-The-Basics-Of-NumPy-Arrays.ipynb
@@ -63,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -86,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -116,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -142,9 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -185,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -207,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -229,9 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -258,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -280,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -309,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -333,9 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -355,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -377,9 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -406,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -438,10 +410,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 0, 3, 3, 7, 9])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -488,10 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -499,7 +487,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,10 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -522,7 +508,7 @@
        "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,10 +519,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -544,7 +528,7 @@
        "array([5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,10 +539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -566,7 +548,7 @@
        "array([4, 5, 6])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,10 +559,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -588,21 +568,20 @@
        "array([0, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[::2]  # every other element"
+    "x[::2]  # every other element\n",
+    "# x[0:10:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -610,7 +589,7 @@
        "array([1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,10 +609,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -641,7 +618,7 @@
        "array([9, 8, 7, 6, 5, 4, 3, 2, 1, 0])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,24 +629,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 77,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5, 3, 1])"
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[5::-2]  # reversed every other from index 5"
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 4, 3, 2, 1, 0])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[5::-1]  # reversed every other from index 5"
    ]
   },
   {
@@ -685,9 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -709,9 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -732,9 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -762,10 +751,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -775,7 +762,7 @@
        "       [ 4,  2,  5, 12]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,10 +783,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -815,10 +800,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -841,10 +824,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -871,10 +852,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -899,10 +878,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -927,10 +904,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 79,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -948,10 +923,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 80,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -985,10 +958,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1013,10 +984,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 82,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1034,10 +1003,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1066,10 +1033,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1099,18 +1064,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 87,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2, 3]])"
+       "((3,), (1, 3))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,15 +1082,13 @@
     "x = np.array([1, 2, 3])\n",
     "\n",
     "# row vector via reshape\n",
-    "x.reshape((1, 3))"
+    "x.shape, x.reshape((1, 3)).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 88,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1135,7 +1096,7 @@
        "array([[1, 2, 3]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,10 +1108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1160,7 +1119,7 @@
        "       [3]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,10 +1131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 90,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1185,7 +1142,7 @@
        "       [3]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,10 +1180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 91,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1234,7 +1189,7 @@
        "array([1, 2, 3, 3, 2, 1])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,10 +1209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 92,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1281,10 +1234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 93,
+   "metadata": {},
    "outputs": [],
    "source": [
     "grid = np.array([[1, 2, 3],\n",
@@ -1293,10 +1244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1307,7 +1256,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,10 +1268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 95,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1331,7 +1278,7 @@
        "       [4, 5, 6, 4, 5, 6]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,10 +1297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 96,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1363,7 +1308,7 @@
        "       [6, 5, 4]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,10 +1324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 97,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1391,7 +1334,7 @@
        "       [ 6,  5,  4, 99]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,6 +1354,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9, 8, 7],\n",
+       "       [6, 5, 4]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([grid, grid]) == np.vstack([grid, grid])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([grid, grid], axis=1) == np.hstack([grid, grid])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1421,10 +1429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 103,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1450,10 +1456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 104,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1464,7 +1468,7 @@
        "       [12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,9 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1500,10 +1502,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]]\n",
+      "[[4 5 6 7]]\n",
+      "[[ 8  9 10 11]]\n",
+      "[[12 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c, d = np.vsplit(grid, [1, 2, 3])\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1543,7 +1567,17 @@
   }
  ],
  "metadata": {
+  "_draft": {
+   "nbviewer_url": "https://gist.github.com/4e91e35814e21018c97b50f0e987b92c"
+  },
   "anaconda-cloud": {},
+  "gist": {
+   "data": {
+    "description": "notebooks/02.02-The-Basics-Of-NumPy-Arrays.ipynb",
+    "public": false
+   },
+   "id": "4e91e35814e21018c97b50f0e987b92c"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1559,9 +1593,55 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "223px",
+    "left": "888px",
+    "right": "20px",
+    "top": "120px",
+    "width": "348px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
